[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://2d_art/Untitled_07-28-2025_10-39-53_6.png" type="Texture" id=2]
[ext_resource path="res://2d_art/Untitled_07-28-2025_10-39-53_7.png" type="Texture" id=3]
[ext_resource path="res://2d_art/Untitled_07-28-2025_10-39-53_4_1.png" type="Texture" id=4]
[ext_resource path="res://2d_art/Untitled_07-28-2025_10-39-53_2.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0196078, 0.188235, 0.101961, 1 )

[node name="main_menu" type="Control"]
margin_right = 256.0
margin_bottom = 136.0
rect_scale = Vector2( 4.01972, 4.43214 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 1, 1 )
anchor_mode = 0
current = true

[node name="Panel" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 6.31337, 3.38913 )
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = -4.0
margin_right = 111.0
margin_bottom = 88.0
rect_scale = Vector2( 0.6, 0.6 )

[node name="Untitled07-28-202510-39-532" type="Sprite" parent="VBoxContainer"]
position = Vector2( 84.8022, 55.7831 )
scale = Vector2( 0.0833333, 0.0833333 )
texture = ExtResource( 5 )

[node name="Untitled07-28-202510-39-5341" type="Sprite" parent="VBoxContainer"]
position = Vector2( 84.8022, 88.8747 )
scale = Vector2( 0.0833333, 0.0833333 )
texture = ExtResource( 4 )

[node name="Untitled07-28-202510-39-536" type="Sprite" parent="VBoxContainer"]
position = Vector2( 84.8022, -4.38354 )
scale = Vector2( 0.0833333, 0.0833334 )
texture = ExtResource( 2 )

[node name="Untitled07-28-202510-39-537" type="Sprite" parent="VBoxContainer"]
position = Vector2( 84.8022, 25.6997 )
scale = Vector2( 0.0833333, 0.0833334 )
texture = ExtResource( 3 )

[node name="new" type="TextureButton" parent="."]
margin_left = 213.0
margin_top = 54.0
margin_right = 241.0
margin_bottom = 70.0

[node name="load" type="TextureButton" parent="."]
margin_left = 212.95
margin_top = 72.1999
margin_right = 240.95
margin_bottom = 88.1999

[node name="settings" type="TextureButton" parent="."]
margin_left = 212.95
margin_top = 90.2498
margin_right = 240.95
margin_bottom = 106.25

[node name="exit" type="TextureButton" parent="."]
margin_left = 212.95
margin_top = 110.105
margin_right = 240.95
margin_bottom = 126.105

[connection signal="pressed" from="new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
